// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProgramLevelList > Snapshot Tests > should match snapshot with default view 1`] = `
<div
  class="space-y-2"
>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm transition-all duration-300"
  >
    <div
      class="p-4 flex items-center gap-4"
    >
      <div
        class="flex items-center justify-center min-w-[3rem]"
      >
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground font-mono"
        >
          1
        </div>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <div
          class="flex items-center gap-2 mb-1"
        >
          <svg
            class="lucide lucide-layers h-4 w-4 text-muted-foreground flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83Z"
            />
            <path
              d="m22 17.65-9.17 4.16a2 2 0 0 1-1.66 0L2 17.65"
            />
            <path
              d="m22 12.65-9.17 4.16a2 2 0 0 1-1.66 0L2 12.65"
            />
          </svg>
          <h3
            class="font-semibold truncate"
          >
            Year 1: Foundation
          </h3>
        </div>
        <p
          class="text-sm text-muted-foreground line-clamp-1"
        >
          Introduction to computer science fundamentals and programming basics
        </p>
      </div>
      <div
        class="flex items-center gap-6 text-sm"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            class="lucide lucide-book-open h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"
            />
            <path
              d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"
            />
          </svg>
          <div>
            <div
              class="font-medium"
            >
              6
            </div>
            <div
              class="text-xs text-muted-foreground"
            >
              Courses
            </div>
          </div>
        </div>
        <div
          class="text-center"
        >
          <div
            class="font-medium"
          >
            30
          </div>
          <div
            class="text-xs text-muted-foreground"
          >
            Credits
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm transition-all duration-300"
  >
    <div
      class="p-4 flex items-center gap-4"
    >
      <div
        class="flex items-center justify-center min-w-[3rem]"
      >
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground font-mono"
        >
          2
        </div>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <div
          class="flex items-center gap-2 mb-1"
        >
          <svg
            class="lucide lucide-layers h-4 w-4 text-muted-foreground flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83Z"
            />
            <path
              d="m22 17.65-9.17 4.16a2 2 0 0 1-1.66 0L2 17.65"
            />
            <path
              d="m22 12.65-9.17 4.16a2 2 0 0 1-1.66 0L2 12.65"
            />
          </svg>
          <h3
            class="font-semibold truncate"
          >
            Year 2: Core Concepts
          </h3>
        </div>
        <p
          class="text-sm text-muted-foreground line-clamp-1"
        >
          Data structures, algorithms, and software engineering principles
        </p>
      </div>
      <div
        class="flex items-center gap-6 text-sm"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            class="lucide lucide-book-open h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"
            />
            <path
              d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"
            />
          </svg>
          <div>
            <div
              class="font-medium"
            >
              8
            </div>
            <div
              class="text-xs text-muted-foreground"
            >
              Courses
            </div>
          </div>
        </div>
        <div
          class="text-center"
        >
          <div
            class="font-medium"
          >
            30
          </div>
          <div
            class="text-xs text-muted-foreground"
          >
            Credits
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm transition-all duration-300"
  >
    <div
      class="p-4 flex items-center gap-4"
    >
      <div
        class="flex items-center justify-center min-w-[3rem]"
      >
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground font-mono"
        >
          3
        </div>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <div
          class="flex items-center gap-2 mb-1"
        >
          <svg
            class="lucide lucide-layers h-4 w-4 text-muted-foreground flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83Z"
            />
            <path
              d="m22 17.65-9.17 4.16a2 2 0 0 1-1.66 0L2 17.65"
            />
            <path
              d="m22 12.65-9.17 4.16a2 2 0 0 1-1.66 0L2 12.65"
            />
          </svg>
          <h3
            class="font-semibold truncate"
          >
            Year 3: Advanced Topics
          </h3>
        </div>
        <p
          class="text-sm text-muted-foreground line-clamp-1"
        >
          Advanced algorithms, system design, and specialized areas
        </p>
      </div>
      <div
        class="flex items-center gap-6 text-sm"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            class="lucide lucide-book-open h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"
            />
            <path
              d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"
            />
          </svg>
          <div>
            <div
              class="font-medium"
            >
              7
            </div>
            <div
              class="text-xs text-muted-foreground"
            >
              Courses
            </div>
          </div>
        </div>
        <div
          class="text-center"
        >
          <div
            class="font-medium"
          >
            30
          </div>
          <div
            class="text-xs text-muted-foreground"
          >
            Credits
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm transition-all duration-300"
  >
    <div
      class="p-4 flex items-center gap-4"
    >
      <div
        class="flex items-center justify-center min-w-[3rem]"
      >
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground font-mono"
        >
          4
        </div>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <div
          class="flex items-center gap-2 mb-1"
        >
          <svg
            class="lucide lucide-layers h-4 w-4 text-muted-foreground flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83Z"
            />
            <path
              d="m22 17.65-9.17 4.16a2 2 0 0 1-1.66 0L2 17.65"
            />
            <path
              d="m22 12.65-9.17 4.16a2 2 0 0 1-1.66 0L2 12.65"
            />
          </svg>
          <h3
            class="font-semibold truncate"
          >
            Year 4: Capstone
          </h3>
        </div>
        <p
          class="text-sm text-muted-foreground line-clamp-1"
        >
          Final year project, electives, and career preparation
        </p>
      </div>
      <div
        class="flex items-center gap-6 text-sm"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            class="lucide lucide-book-open h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"
            />
            <path
              d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"
            />
          </svg>
          <div>
            <div
              class="font-medium"
            >
              5
            </div>
            <div
              class="text-xs text-muted-foreground"
            >
              Courses
            </div>
          </div>
        </div>
        <div
          class="text-center"
        >
          <div
            class="font-medium"
          >
            30
          </div>
          <div
            class="text-xs text-muted-foreground"
          >
            Credits
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgramLevelList > Snapshot Tests > should match snapshot with empty state 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm p-8 text-center"
>
  <svg
    class="lucide lucide-layers h-12 w-12 mx-auto text-muted-foreground mb-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83Z"
    />
    <path
      d="m22 17.65-9.17 4.16a2 2 0 0 1-1.66 0L2 17.65"
    />
    <path
      d="m22 12.65-9.17 4.16a2 2 0 0 1-1.66 0L2 12.65"
    />
  </svg>
  <h3
    class="text-lg font-semibold mb-2"
  >
    No Levels Found
  </h3>
  <p
    class="text-sm text-muted-foreground"
  >
    This program doesn't have any levels yet.
  </p>
</div>
`;

exports[`ProgramLevelList > Snapshot Tests > should match snapshot with loading state 1`] = `
<div
  class="space-y-2"
>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm p-4"
  >
    <div
      class="flex items-center gap-4"
    >
      <div
        class="h-10 w-10 bg-muted animate-pulse rounded"
      />
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="h-4 bg-muted animate-pulse rounded w-1/3"
        />
        <div
          class="h-3 bg-muted animate-pulse rounded w-1/2"
        />
      </div>
    </div>
  </div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm p-4"
  >
    <div
      class="flex items-center gap-4"
    >
      <div
        class="h-10 w-10 bg-muted animate-pulse rounded"
      />
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="h-4 bg-muted animate-pulse rounded w-1/3"
        />
        <div
          class="h-3 bg-muted animate-pulse rounded w-1/2"
        />
      </div>
    </div>
  </div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm p-4"
  >
    <div
      class="flex items-center gap-4"
    >
      <div
        class="h-10 w-10 bg-muted animate-pulse rounded"
      />
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="h-4 bg-muted animate-pulse rounded w-1/3"
        />
        <div
          class="h-3 bg-muted animate-pulse rounded w-1/2"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgramLevelList > Snapshot Tests > should match snapshot with reorder enabled 1`] = `
<div
  class="space-y-2"
>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm transition-all duration-300"
  >
    <div
      class="p-4 flex items-center gap-4"
    >
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="lucide lucide-grip-vertical h-5 w-5 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="9"
            cy="12"
            r="1"
          />
          <circle
            cx="9"
            cy="5"
            r="1"
          />
          <circle
            cx="9"
            cy="19"
            r="1"
          />
          <circle
            cx="15"
            cy="12"
            r="1"
          />
          <circle
            cx="15"
            cy="5"
            r="1"
          />
          <circle
            cx="15"
            cy="19"
            r="1"
          />
        </svg>
        <div
          class="flex flex-col gap-1"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground rounded-md h-6 w-6 p-0"
            disabled=""
          >
            <svg
              class="lucide lucide-arrow-up h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m5 12 7-7 7 7"
              />
              <path
                d="M12 19V5"
              />
            </svg>
          </button>
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground rounded-md h-6 w-6 p-0"
          >
            <svg
              class="lucide lucide-arrow-down h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 5v14"
              />
              <path
                d="m19 12-7 7-7-7"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="flex items-center justify-center min-w-[3rem]"
      >
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground font-mono"
        >
          1
        </div>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <div
          class="flex items-center gap-2 mb-1"
        >
          <svg
            class="lucide lucide-layers h-4 w-4 text-muted-foreground flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83Z"
            />
            <path
              d="m22 17.65-9.17 4.16a2 2 0 0 1-1.66 0L2 17.65"
            />
            <path
              d="m22 12.65-9.17 4.16a2 2 0 0 1-1.66 0L2 12.65"
            />
          </svg>
          <h3
            class="font-semibold truncate"
          >
            Year 1: Foundation
          </h3>
        </div>
        <p
          class="text-sm text-muted-foreground line-clamp-1"
        >
          Introduction to computer science fundamentals and programming basics
        </p>
      </div>
      <div
        class="flex items-center gap-6 text-sm"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            class="lucide lucide-book-open h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"
            />
            <path
              d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"
            />
          </svg>
          <div>
            <div
              class="font-medium"
            >
              6
            </div>
            <div
              class="text-xs text-muted-foreground"
            >
              Courses
            </div>
          </div>
        </div>
        <div
          class="text-center"
        >
          <div
            class="font-medium"
          >
            30
          </div>
          <div
            class="text-xs text-muted-foreground"
          >
            Credits
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm transition-all duration-300"
  >
    <div
      class="p-4 flex items-center gap-4"
    >
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="lucide lucide-grip-vertical h-5 w-5 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="9"
            cy="12"
            r="1"
          />
          <circle
            cx="9"
            cy="5"
            r="1"
          />
          <circle
            cx="9"
            cy="19"
            r="1"
          />
          <circle
            cx="15"
            cy="12"
            r="1"
          />
          <circle
            cx="15"
            cy="5"
            r="1"
          />
          <circle
            cx="15"
            cy="19"
            r="1"
          />
        </svg>
        <div
          class="flex flex-col gap-1"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground rounded-md h-6 w-6 p-0"
          >
            <svg
              class="lucide lucide-arrow-up h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m5 12 7-7 7 7"
              />
              <path
                d="M12 19V5"
              />
            </svg>
          </button>
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground rounded-md h-6 w-6 p-0"
          >
            <svg
              class="lucide lucide-arrow-down h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 5v14"
              />
              <path
                d="m19 12-7 7-7-7"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="flex items-center justify-center min-w-[3rem]"
      >
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground font-mono"
        >
          2
        </div>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <div
          class="flex items-center gap-2 mb-1"
        >
          <svg
            class="lucide lucide-layers h-4 w-4 text-muted-foreground flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83Z"
            />
            <path
              d="m22 17.65-9.17 4.16a2 2 0 0 1-1.66 0L2 17.65"
            />
            <path
              d="m22 12.65-9.17 4.16a2 2 0 0 1-1.66 0L2 12.65"
            />
          </svg>
          <h3
            class="font-semibold truncate"
          >
            Year 2: Core Concepts
          </h3>
        </div>
        <p
          class="text-sm text-muted-foreground line-clamp-1"
        >
          Data structures, algorithms, and software engineering principles
        </p>
      </div>
      <div
        class="flex items-center gap-6 text-sm"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            class="lucide lucide-book-open h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"
            />
            <path
              d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"
            />
          </svg>
          <div>
            <div
              class="font-medium"
            >
              8
            </div>
            <div
              class="text-xs text-muted-foreground"
            >
              Courses
            </div>
          </div>
        </div>
        <div
          class="text-center"
        >
          <div
            class="font-medium"
          >
            30
          </div>
          <div
            class="text-xs text-muted-foreground"
          >
            Credits
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm transition-all duration-300"
  >
    <div
      class="p-4 flex items-center gap-4"
    >
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="lucide lucide-grip-vertical h-5 w-5 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="9"
            cy="12"
            r="1"
          />
          <circle
            cx="9"
            cy="5"
            r="1"
          />
          <circle
            cx="9"
            cy="19"
            r="1"
          />
          <circle
            cx="15"
            cy="12"
            r="1"
          />
          <circle
            cx="15"
            cy="5"
            r="1"
          />
          <circle
            cx="15"
            cy="19"
            r="1"
          />
        </svg>
        <div
          class="flex flex-col gap-1"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground rounded-md h-6 w-6 p-0"
          >
            <svg
              class="lucide lucide-arrow-up h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m5 12 7-7 7 7"
              />
              <path
                d="M12 19V5"
              />
            </svg>
          </button>
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground rounded-md h-6 w-6 p-0"
          >
            <svg
              class="lucide lucide-arrow-down h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 5v14"
              />
              <path
                d="m19 12-7 7-7-7"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="flex items-center justify-center min-w-[3rem]"
      >
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground font-mono"
        >
          3
        </div>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <div
          class="flex items-center gap-2 mb-1"
        >
          <svg
            class="lucide lucide-layers h-4 w-4 text-muted-foreground flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83Z"
            />
            <path
              d="m22 17.65-9.17 4.16a2 2 0 0 1-1.66 0L2 17.65"
            />
            <path
              d="m22 12.65-9.17 4.16a2 2 0 0 1-1.66 0L2 12.65"
            />
          </svg>
          <h3
            class="font-semibold truncate"
          >
            Year 3: Advanced Topics
          </h3>
        </div>
        <p
          class="text-sm text-muted-foreground line-clamp-1"
        >
          Advanced algorithms, system design, and specialized areas
        </p>
      </div>
      <div
        class="flex items-center gap-6 text-sm"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            class="lucide lucide-book-open h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"
            />
            <path
              d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"
            />
          </svg>
          <div>
            <div
              class="font-medium"
            >
              7
            </div>
            <div
              class="text-xs text-muted-foreground"
            >
              Courses
            </div>
          </div>
        </div>
        <div
          class="text-center"
        >
          <div
            class="font-medium"
          >
            30
          </div>
          <div
            class="text-xs text-muted-foreground"
          >
            Credits
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm transition-all duration-300"
  >
    <div
      class="p-4 flex items-center gap-4"
    >
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="lucide lucide-grip-vertical h-5 w-5 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="9"
            cy="12"
            r="1"
          />
          <circle
            cx="9"
            cy="5"
            r="1"
          />
          <circle
            cx="9"
            cy="19"
            r="1"
          />
          <circle
            cx="15"
            cy="12"
            r="1"
          />
          <circle
            cx="15"
            cy="5"
            r="1"
          />
          <circle
            cx="15"
            cy="19"
            r="1"
          />
        </svg>
        <div
          class="flex flex-col gap-1"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground rounded-md h-6 w-6 p-0"
          >
            <svg
              class="lucide lucide-arrow-up h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m5 12 7-7 7 7"
              />
              <path
                d="M12 19V5"
              />
            </svg>
          </button>
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground rounded-md h-6 w-6 p-0"
            disabled=""
          >
            <svg
              class="lucide lucide-arrow-down h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 5v14"
              />
              <path
                d="m19 12-7 7-7-7"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="flex items-center justify-center min-w-[3rem]"
      >
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground font-mono"
        >
          4
        </div>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <div
          class="flex items-center gap-2 mb-1"
        >
          <svg
            class="lucide lucide-layers h-4 w-4 text-muted-foreground flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83Z"
            />
            <path
              d="m22 17.65-9.17 4.16a2 2 0 0 1-1.66 0L2 17.65"
            />
            <path
              d="m22 12.65-9.17 4.16a2 2 0 0 1-1.66 0L2 12.65"
            />
          </svg>
          <h3
            class="font-semibold truncate"
          >
            Year 4: Capstone
          </h3>
        </div>
        <p
          class="text-sm text-muted-foreground line-clamp-1"
        >
          Final year project, electives, and career preparation
        </p>
      </div>
      <div
        class="flex items-center gap-6 text-sm"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            class="lucide lucide-book-open h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"
            />
            <path
              d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"
            />
          </svg>
          <div>
            <div
              class="font-medium"
            >
              5
            </div>
            <div
              class="text-xs text-muted-foreground"
            >
              Courses
            </div>
          </div>
        </div>
        <div
          class="text-center"
        >
          <div
            class="font-medium"
          >
            30
          </div>
          <div
            class="text-xs text-muted-foreground"
          >
            Credits
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
